--- a/templates/banner.html
+++ b/templates/banner.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/scss" href="../css/_reset.scss">
 	<link rel="stylesheet" type="text/scss" href="../css/_banner.scss">
-	<link rel="stylesheet" type="text/scss" href="../css/_banner.scss">
+	<link rel="stylesheet" type="text/scss" href="../css/_button.scss">
 </head>
 <body>
 <section class="banner">
