added new html files

--- a/templates/section_banner.html
+++ b/templates/section_banner.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/scss" href="../css/_reset.scss">
-	<link rel="stylesheet" type="text/scss" href="../css/_banner.scss">
-	<link rel="stylesheet" type="text/scss" href="../css/_button.scss">
+	<title>Banner</title>
+	<link rel="stylesheet" type="text/scss" href="../sass/_reset.scss">
+	<link rel="stylesheet" type="text/scss" href="../sass/_banner.scss">
+	<link rel="stylesheet" type="text/scss" href="../sass/_button.scss">
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../css/banner.css">
 </head>
 <body>
 <section class="banner">
