--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,12 @@
 @import "_reset.scss";
 @import "_banner.scss";
+@import "_blog.scss";
+@import "_services.scss";
+@import "_section_project.scss";
+@import "_works.scss";
+@import "_team.scss";
+@import "_pre-footer.scss";
+@import "_video-slider.scss";
+@import "_footer.scss";
+@import "_variables.scss";
 @import "_button.scss";
